update send mail